--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ZhihuRetrofitVolley</string>
+    <string name="title_activity_story_detail">StoryDetailActivity</string>
 </resources>
