--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_activity_story_detail">StoryDetailActivity</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_comment">CommentActivity</string>
+
+    <string name="title_comments_long">long comments</string>
+    <string name="title_comments_short">short comments</string>
+
 </resources>
